Fixed Horizontal Alignment in Section Grid

--- a/_scss/components/section-grid.scss
+++ b/_scss/components/section-grid.scss
@@ -14,8 +14,6 @@
         .description {
             display: flex;
             flex-direction: column;
-
-            text-align: center;
         }
     }
 
